# AI_assitant_render_flask

./: README.md  app.py  memory.txt  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  todo.txt
templates/: index.html
