[tool.poetry]
name = "ai-assistant-flask"
version = "0.1.0"
description = "AI Assistant built with Flask"
authors = ["Om Sinha <omaasinha.99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
openai = "^1.3.3"
pywin32 = { version = "==306", markers = "sys_platform == 'win32'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
